sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:7: error: type mismatch;
 found   : Boolean
 required: Int
    x=plusPetit(j,i)
               ^AlgSelectionSort:8: error: not found: value u
  echange(u,x)
          ^